name:                stockfighter-jailbreak
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/MichaelBurge/stockfighter-jailbreak#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Burge
maintainer:          michaelburge@pobox.com
copyright:           Copyright: (c) 2016 Michael Burge
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api.Stockfighter.Jailbreak
                     , Api.Stockfighter.Jailbreak.Api
                     , Api.Stockfighter.Jailbreak.Config
                     , Api.Stockfighter.Jailbreak.Decompiler
                     , Api.Stockfighter.Jailbreak.Decompiler.AST
                     , Api.Stockfighter.Jailbreak.Decompiler.Passes
                     , Api.Stockfighter.Jailbreak.Decompiler.Print
                     , Api.Stockfighter.Jailbreak.Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , base64-bytestring
                     , bytestring
                     , configurator
                     , containers
                     , either
                     , http-client
                     , http-client-tls
                     , lens
                     , pretty
                     , servant
                     , servant-client
                     , text
                     , transformers
                     
  extensions:          LambdaCase
                     , OverloadedStrings
  default-language:    Haskell2010

executable jb
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , stockfighter-jailbreak
                     , text
                     , bytestring
                     , pretty
                     , transformers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MichaelBurge/stockfighter-jailbreak
